package model;

public interface IBodyPart{

}