package model;

public class AMuscle implements IBodyPart{

    public String name;
    public String description;
    
    public AMuscle()
    {

    }
}