package model;

public class Exercise extends ATraining{
    public Exercise()
    {
        super();
    }
}