package model;

public class Muscle extends AMuscle{
    public Muscle()
    {
        super();
    }
}