package model;

/**
 * Created by shagabel on 04/02/2015.
 */
public class Performance {
    public Performance()
    {

    }
}
